--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,102 +1,17 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Crear Rutina</a>
-  <a class="navbar-brand" href="#">Comenzar Ejercicio</a>
-  <a class="navbar-brand" href="#">Contactanos</a>
-</nav>
-
-<body class="bg-light">
-
-  
+<div class="d-flex flex-column min-vh-100">
   <div class="container-fluid">
-<br><br>
-    <div class="row">
-
-      <div class="col-sm-4">
-        <h4 class="mb-3">{{t}}</h4>
-        <form class="needs-validation" novalidate>
-          <label for="email">Tipos de Ejercicio <span class="text-muted">------>({{TiposDeEjercicio[tipoActual]}})</span></label>
-          <p>
-
-            <a href="#" (click)="setTipo(0)" class="btn btn-sq-lg btn-primary">
-              <i class="fa fa-user fa-5x"></i><br />
-              Espalda <br><br>
-            </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#" (click)="setTipo(1)" class="btn btn-sq-lg btn-success">
-              <i class="fa fa-user fa-5x"></i><br />
-              Bicep <br><br>
-            </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#" (click)="setTipo(2)" class="btn btn-sq-lg btn-info">
-              <i class="fa fa-user fa-5x"></i><br />
-              Hombro <br><br>
-            </a>
-          </p>
-
-          <br>
-          <div class="mb-3">
-            <label for="txtSets">Numero de Sets</label>
-            <input type="number" min="1" step="1" class="form-control" id="txtSets" placeholder="Ingrese el numero de Sets que desea realizar" #nS>
-            <div class="invalid-feedback">
-              Ingrese el numero de Sets que desea realizar
-            </div>
-          </div>
-          <br>
-          <div class="mb-3">
-            <label for="txtReps">Numero de Repeticiones</label>
-            <input type="number" min="1" step="1" class="form-control" id="txtReps" placeholder="Ingrese el numero de repeticiones por cada Set" #nR>
-            <div class="invalid-feedback">
-              Ingrese el numero de repeticiones por cada Set
-            </div>
-          </div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <button (click)="addToRutina(nS.value,nR.value)" class="btn btn-primary btn-lg btn-block" type="submit"><b><b><b>+</b></b></b> Agregar a Rutina actual </button>
-        </form>
-      </div>
-      <div class="col-sm-4" style="background-color:gainsboro;">
-
-        <h3>Ejemplo</h3><br>
-        <br>
-        <br>
-        <div class="landscape">
-          <img class="img-fluid" src={{PathGifs[tipoActual]}}>
-      </div>
-      <br>
-      <br>. 
-
-      </div>
-      <div class="col-sm-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-muted">Tu rutina</span>
-          <span class="badge badge-secondary badge-pill">{{ArregloEjercicios.length}}</span>
-        </h4>
-        <small class="text-info">Reps: numero de veces que se debe repetir el ejercicio en cada Set.</small>
-        <ul class="list-group mb-3">
-          <li *ngFor="let e of ArregloEjercicios" class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Tipo:{{e.Te}}</h6>
-              <small class="text-muted">{{DescripcionEjercicio[e.tipo]}}</small>
-            </div>
-            <span class="text-muted">Sets: {{e.nSets}}</span>
-            <span class="text-muted">Reps: {{e.nReps}}</span>
-          </li>
-        </ul>
-      </div>
+    <router-outlet></router-outlet>
     </div>
+</div>
 
-    <!-- Footer -->
-    <footer class="my-5 pt-5 text-muted text-center text-small">
-      <p class="mb-1">&copy; Grupo 3- Arquitectura de Computadoras y Ensambladores 2</p>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Carlos Rodrigo Estrada Najarro 201700314,</a></li>
-        <li class="list-inline-item"><a href="#">José Francisco Puac Ixcamparic 201700342,</a></li>
-        <li class="list-inline-item"><a href="#">Luis Angel Vargas Leon 201701023,</a></li>
-        <li class="list-inline-item"><a href="#">Gabriela Elizabeth Zavala López 201701131</a></li>
-      </ul>
-    </footer>
-    <!-- Footer -->
-  </div>
-</body>
+
+<!-- Footer -->
+<footer class="bg-light my-5 pt-5 text-muted text-center text-small">
+  <p class="mb-1">&copy; Grupo 3- Arquitectura de Computadoras y Ensambladores 2</p>
+  <ul class="list-inline">
+      <li class="list-inline-item"><a>Carlos Rodrigo Estrada Najarro 201700314,</a></li>
+      <li class="list-inline-item"><a>José Francisco Puac Ixcamparic 201700342,</a></li>
+      <li class="list-inline-item"><a>Luis Angel Vargas Leon 201701023,</a></li>
+      <li class="list-inline-item"><a>Gabriela Elizabeth Zavala López 201701131</a></li>
+  </ul>
+</footer>
