--- a/src/app/components/ejec-rutina/ejec-rutina.component.html
+++ b/src/app/components/ejec-rutina/ejec-rutina.component.html
@@ -1,2 +1,79 @@
 <app-barra></app-barra>
-<h1>ejec-rutina works! {{t}} </h1>
+<h1>Preparado, listo, Comenzamos... </h1>
+
+<br>
+<div class="row" style="background-color:azure;">
+
+    <div class="col-sm-4">
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/clock.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Tiempo:</b></h2>
+                <h2>min: <span class="badge badge-secondary">{{min}}</span> seg: <span
+                        class="badge badge-secondary">{{seg}}</span></h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/gym.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Peso:</b></h2>
+                <h2><span class="badge badge-secondary">{{peso}}</span> Kg.</h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/count.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Repeticiones:</b></h2>
+                <h2><span class="badge badge-secondary">{{reps}}</span>/{{totalReps}}</h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/countdown.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Sets:</b></h2>
+                <h2><span class="badge badge-secondary">{{sets}}</span>/{{totalSets}}</h2>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="col-sm-4">
+
+        <br><br><br><br>
+        <button (click)="continuar()" class="btn btn-info btn-lg btn-block" type="submit">
+            Continuar
+        </button>
+        <br><br>
+        <button (click)="pausar()" class="btn btn-warning btn-lg btn-block" type="submit">
+            pausar
+        </button>
+        <br><br>
+        <button (click)="finalizar()" class="btn btn-danger btn-lg btn-block" type="submit">
+            Finalizar
+        </button>
+
+
+    </div>
+    <div class="col-sm-4">
+        <h2><b>{{TiposDeEjercicio[ejercicioActual]}}</b></h2>
+        <br>
+        <img class="img-fluid" src={{PathGifs[ejercicioActual]}}>
+    </div>
+</div>
+
+<br>
