--- a/src/app/components/barra/barra.component.html
+++ b/src/app/components/barra/barra.component.html
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <a routerLink="/home" class="navbar-brand">Crear Rutina</a>
         <a routerLink="/play" class="navbar-brand">Comenzar Ejercicio</a>
+        <a routerLink="/analytics" class="navbar-brand">Analytics</a>
         <a class="navbar-brand">Contactanos</a>
     </nav>
 </div>
