contadores bien/mal

--- a/src/app/components/ejec-rutina/ejec-rutina.component.html
+++ b/src/app/components/ejec-rutina/ejec-rutina.component.html
@@ -49,6 +49,28 @@
                 <h2><span class="badge badge-secondary">{{sets}}</span>/{{totalSets}}</h2>
             </div>
         </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/bien.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Total buenas:</b></h2>
+                <h2><span class="badge badge-secondary">{{buenas}}</span></h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid" src='../../../assets/media/mal.png'>
+            </div>
+
+            <div class="col-sm-6" style="background-color:gainsboro;">
+                <h2><b>Total malas:</b></h2>
+                <h2><span class="badge badge-secondary">{{malas}}</span></h2>
+            </div>
+        </div>
 
 
     </div>
