--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -75,11 +75,11 @@
         <ul class="list-group mb-3">
             <li *ngFor="let e of ArregloEjercicios" class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
-                    <h6 class="my-0">Tipo:{{TiposDeEjercicio[e.tipo]}}</h6>
-                    <small class="text-muted">{{DescripcionEjercicio[e.tipo]}}</small>
+                    <h6 class="my-0">{{TiposDeEjercicio[e.tipo-1]}}</h6>
+                    <small class="text-muted">{{DescripcionEjercicio[e.tipo-1]}}</small>
                 </div>
-                <span class="text-muted">Sets: {{e.nSets}}</span>
-                <span class="text-muted">Reps: {{e.nReps}}</span>
+                <span class="text-muted">Sets: {{e.sets}}</span>
+                <span class="text-muted">Reps: {{e.reps}}</span>
             </li>
         </ul>
     </div>
