--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,86 +1,109 @@
 <app-barra></app-barra>
-<h1>Crear Rutina</h1>
-<br>
-<div class="row">
 
-    <div class="col-sm-4">
-        <h4 class="mb-3">{{t}}</h4>
-        <form class="needs-validation" novalidate>
-            <label for="email">Tipos de Ejercicio <span
-                    class="text-muted">------>({{TiposDeEjercicio[tipoActual]}})</span></label>
-            <p>
-
-                <a (click)="setTipo(0)" class="btn btn-lg btn-primary">
-                    <i class="fa fa-user fa-5x"></i><br />
-                    Espalda <br><br>
-                </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a (click)="setTipo(1)" class="btn btn-lg btn-success">
-                    <i class="fa fa-user fa-5x"></i><br />
-                    Bicep <br><br>
-                </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a (click)="setTipo(2)" class="btn btn-lg btn-info">
-                    <i class="fa fa-user fa-5x"></i><br />
-                    Hombro <br><br>
-                </a>
-            </p>
-
-            <br>
-            <div class="mb-3">
-                <label for="txtSets">Numero de Sets</label>
-                <input type="number" min="1" step="1" class="form-control" id="txtSets"
-                    placeholder="Ingrese el numero de Sets que desea realizar" #nS>
-                <div class="invalid-feedback">
-                    Ingrese el numero de Sets que desea realizar
+<div class="container p-4">
+    <hr>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card text-center">
+                <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
+                    Crear Rutina
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card text-center">
+                                <div
+                                    class="card-header bg-light text-black d-flex justify-content-between align-items-center">
+                                    {{TiposDeEjercicio[tipoActual]}}
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="form-group col-md-4">
+                                            <a (click)="setTipo(0)" class="btn btn-lg btn-primary btn-block text-white">
+                                                <i class="fas fa-dumbbell"></i>
+                                                Espalda
+                                            </a>
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <a (click)="setTipo(1)" class="btn btn-lg btn-success btn-block text-white">
+                                                <i class="fas fa-dumbbell"></i>
+                                                Bicep
+                                            </a>
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <a (click)="setTipo(2)" class="btn btn-lg btn-info btn-block text-white">
+                                                <i class="fas fa-dumbbell"></i>
+                                                Hombro
+                                            </a>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <label for="txtSets">Numero de Sets</label>
+                                            <input type="number" min="1" step="1" class="form-control" id="txtSets"
+                                                placeholder="# de Series" #nS>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <label for="txtReps">Numero de Repeticiones</label>
+                                            <input type="number" min="1" step="1" class="form-control" id="txtReps"
+                                                placeholder="# de Repeticiones por Serie" #nR>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <button (click)="addToRutina(nS.value,nR.value)"
+                                                class="btn btn-outline-success btn-lg btn-block" type="submit">+ Agregar
+                                                a
+                                                Rutina actual </button>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <button (click)="clearRutina()"
+                                                class="btn btn-outline-danger btn-lg btn-block" type="submit"> - Vaciar
+                                                Rutina </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card text-center">
+                                <div
+                                    class="card-header bg-light text-black  d-flex justify-content-between align-items-center">
+                                    Ejemplo del Ejercicio
+                                </div>
+                                <div class="card-body">
+                                    <img src={{PathGifs[tipoActual]}} class="img-fluid rounded mx-auto d-block">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card text-center">
+                                <div
+                                    class="card-header bg-light text-black d-flex justify-content-between align-items-center">
+                                    Tu Rutina: {{ArregloEjercicios.length}}
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <small class="text-dark">Reps: repeticiones a realizar por cada serie. </small>
+                                        <ul class="list-group mb-3">
+                                            <li *ngFor="let e of ArregloEjercicios"
+                                                class="list-group-item d-flex justify-content-between lh-condensed">
+                                                <div>
+                                                    <span>{{TiposDeEjercicio[e.tipo-1]}} </span>
+                                                    <small class="text-muted">{{DescripcionEjercicio[e.tipo-1]}}</small>
+                                                </div>
+                                                <span class="text-muted">Sets: {{e.sets}}</span>
+                                                <span class="text-muted">Reps: {{e.reps}}</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <br>
-            <div class="mb-3">
-                <label for="txtReps">Numero de Repeticiones</label>
-                <input type="number" min="1" step="1" class="form-control" id="txtReps"
-                    placeholder="Ingrese el numero de repeticiones por cada Set" #nR>
-                <div class="invalid-feedback">
-                    Ingrese el numero de repeticiones por cada Set
-                </div>
-            </div>
-            <br>
-            <br>
-            <button (click)="addToRutina(nS.value,nR.value)" class="btn btn-primary btn-lg btn-block"
-                type="submit"><b><b><b>+</b></b></b> Agregar a Rutina actual </button>
-            <br>
-            <br>
-            <button (click)="clearRutina()" class="btn btn-danger btn-lg btn-block"
-                type="submit"><b><b><b>-</b></b></b> Vaciar Rutina </button>
-        </form>
-    </div>
-    <div class="col-sm-4" style="background-color:gainsboro;">
-
-        <h3>Ejemplo</h3><br>
-        <br>
-        <br>
-        <div class="landscape">
-            <img class="img-fluid" src={{PathGifs[tipoActual]}}>
         </div>
-        <br>
-        <br>.
-
-    </div>
-    <div class="col-sm-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-muted">Tu rutina</span>
-            <span class="badge badge-secondary badge-pill">{{ArregloEjercicios.length}}</span>
-        </h4>
-        <small class="text-info">Reps: numero de veces que se debe repetir el ejercicio en cada Set.</small>
-        <ul class="list-group mb-3">
-            <li *ngFor="let e of ArregloEjercicios" class="list-group-item d-flex justify-content-between lh-condensed">
-                <div>
-                    <h6 class="my-0">{{TiposDeEjercicio[e.tipo-1]}}</h6>
-                    <small class="text-muted">{{DescripcionEjercicio[e.tipo-1]}}</small>
-                </div>
-                <span class="text-muted">Sets: {{e.sets}}</span>
-                <span class="text-muted">Reps: {{e.reps}}</span>
-            </li>
-        </ul>
     </div>
 </div>
+<hr>
