--- a/src/app/components/ejec-rutina/ejec-rutina.component.html
+++ b/src/app/components/ejec-rutina/ejec-rutina.component.html
@@ -109,7 +109,7 @@
                                         <div class="col-md-4">
                                             <button (click)="continuar()" class="btn btn-info btn-lg btn-block"
                                                 type="submit">
-                                                Continuar
+                                                Iniciar Rutina
                                             </button>
                                         </div>
                                         <div class="col-md-4">
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="row"> 
-                                        <img src={{PathGifs[ejercicioActual]}} class="img-fluid rounded mx-auto d-block">
+                                        <img src={{PathGifs[ejercicioActual-1]}} class="img-fluid rounded mx-auto d-block">
                                     </div>
                                 </div>
                             </div>
