--- a/src/app/components/ejec-rutina/ejec-rutina.component.html
+++ b/src/app/components/ejec-rutina/ejec-rutina.component.html
@@ -44,18 +44,31 @@
                                         <div class="col-md-4">
                                             <div class="row">
                                                 <div class="col-md-3">
+                                                    <img class="img-fluid" src='../../../assets/media/heartbeat.png'>
+                                                </div>
+
+                                                <div class="col-md-9">Ritmo Cardiaco:
+                                                    <span class="badge badge-secondary">{{reps}} bpm.</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                       
+                                    </div>
+                                    <hr>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="row">
+                                                <div class="col-md-3">
                                                     <img class="img-fluid" src='../../../assets/media/count.png'>
                                                 </div>
 
                                                 <div class="col-md-9">
                                                     Repeticiones:
-                                                    <span class="badge badge-secondary">{{reps}}</span>/{{totalReps}}
+                                                    <span class="badge badge-secondary">{{totalReps}}</span>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row">
+
                                         <div class="col-md-4">
                                             <div class="row">
                                                 <div class="col-md-3">
@@ -64,7 +77,7 @@
 
                                                 <div class="col-md-9">
                                                     Sets:
-                                                    <span class="badge badge-secondary">{{sets}}</span>/{{totalSets}}
+                                                    <span class="badge badge-secondary">{{totalSets}}</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -80,6 +93,10 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        
+                                    </div>
+                                    <hr>
+                                    <div class="row">
                                         <div class="col-md-4">
                                             <div class="row">
                                                 <div class="col-md-3">
@@ -134,7 +151,7 @@
                             <div class="card text-center">
                                 <div
                                     class="card-header bg-light text-black d-flex justify-content-between align-items-center">
-                                    Ejercicio Actual: {{TiposDeEjercicio[ejercicioActual]}}
+                                    Ejercicio Actual: {{TiposDeEjercicio[ejercicioActual-1]}}
                                 </div>
                                 <div class="card-body">
                                     <div class="row"> 
