--- a/src/app/components/barra/barra.component.html
+++ b/src/app/components/barra/barra.component.html
@@ -18,6 +18,9 @@
                     <a routerLink="/analytics" class="nav-link"><i class="fas fa-running"></i>  Analytics</a>
                 </li>
                 <li class="nav-item">
+                    <a routerLink="/sugerencia" class="nav-link"><i class="fas fa-running"></i>  Sugerencias</a>
+                </li>
+                <li class="nav-item">
                     <a routerLink="/contacto" class="nav-link"><i class="far fa-address-book"></i>  Contactanos</a>
                 </li>
             </ul>
