--- a/src/app/components/analytics/analytics.component.html
+++ b/src/app/components/analytics/analytics.component.html
@@ -5,7 +5,7 @@
     <input type="text" class="btn btn-outline-primary" id="inputFecha">
     <button type="button" class="btn btn-outline-primary" id="btnFecha">Fecha</button>
     <input type="text" class="btn btn-outline-primary" id="inputEjercicio">
-    <button type="button" class="btn btn-outline-primary" id="btnEjercicio">Ejercicio</button>    
+    <button type="button" class="btn btn-outline-primary" id="btnEjercicio"(click)="type_ejercicio()">Ejercicio</button>    
     <hr>
     <div class="row">
         <div class="col-md-6">
