--- a/src/app/components/analytics/analytics.component.html
+++ b/src/app/components/analytics/analytics.component.html
@@ -4,8 +4,8 @@
 <div class="container p-4" onload="getdata()">
     <input type="text" class="btn btn-outline-primary" id="inputFecha">
     <button type="button" class="btn btn-outline-primary" id="btnFecha">Fecha</button>
-    <input type="text" class="btn btn-outline-primary" id="inputEjercicio">
-    <button type="button" class="btn btn-outline-primary" id="btnEjercicio"(click)="type_ejercicio()">Ejercicio</button>    
+    <input type="text" class="btn btn-outline-primary" id="inputEjercicio" #ns>
+    <button type="button" class="btn btn-outline-primary" id="btnEjercicio"(click)="type_ejercicio(ns.value)">Ejercicio</button>    
     <hr>
     <div class="row">
         <div class="col-md-6">
