Manejo de pausa

--- a/src/app/components/ejec-rutina/ejec-rutina.component.html
+++ b/src/app/components/ejec-rutina/ejec-rutina.component.html
@@ -52,7 +52,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                       
+
                                     </div>
                                     <hr>
                                     <div class="row">
@@ -68,19 +68,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="col-md-4">
-                                            <div class="row">
-                                                <div class="col-md-3">
-                                                    <img class="img-fluid" src='../../../assets/media/countdown.png'>
-                                                </div>
-
-                                                <div class="col-md-9">
-                                                    Sets:
-                                                    <span class="badge badge-secondary">{{totalSets}}</span>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div class="col-md-4">
                                             <div class="row">
                                                 <div class="col-md-3">
@@ -93,10 +80,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        
-                                    </div>
-                                    <hr>
-                                    <div class="row">
                                         <div class="col-md-4">
                                             <div class="row">
                                                 <div class="col-md-3">
@@ -110,6 +93,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -154,8 +138,9 @@
                                     Ejercicio Actual: {{TiposDeEjercicio[ejercicioActual-1]}}
                                 </div>
                                 <div class="card-body">
-                                    <div class="row"> 
-                                        <img src={{PathGifs[ejercicioActual-1]}} class="img-fluid rounded mx-auto d-block">
+                                    <div class="row">
+                                        <img src={{PathGifs[ejercicioActual-1]}}
+                                            class="img-fluid rounded mx-auto d-block">
                                     </div>
                                 </div>
                             </div>
